# benchmarks-detection-denoising

./: .buildinfo  .gitignore  README.md  benchmark_demo.html  config_denoising.yaml  config_detection.yaml  demo_benchmark.ipynb  demo_signal_bank.ipynb  genindex.html  index.html  methods.html  modules.html  objects.inv  poetry.toml  ppp_simulations_N_128_Nsim_2499.mcsim  prueba_metodo_spatstats.py  py-modindex.html  pyproject.toml  results_denoising.html  results_denoising_CC.html  results_detection.html  results_musical_noise_APS.html  results_musical_noise_QRF.html  run_this_benchmark.py  run_this_benchmark_denoising.py  run_this_benchmark_denoising_CC.py  run_this_benchmark_detection.py  search.html  searchindex.js
.github/workflows/: bm_tests.yml  check_new_methods  deploy_docs.yml  local_tests.yml  pub_docs.yml  pub_docs_and_results.yml  python-app.yml  run_bm_denoising.yml  run_tests.yml
_modules/: index.html
_modules/benchmark_demo/: Benchmark.html  SignalBank.html  utilstf.html
_modules/methods/: method_contours.html  method_empty_space.html  method_hard_threshold.html  method_identity.html  spatstats_utils.html
_sources/: index.rst.txt  results_denoising.md.txt  results_denoising_CC.md.txt  results_detection.md.txt  results_musical_noise_QRF.md.txt
benchmark_demo/: Benchmark.py  SignalBank.py  bank_test.py  benchmark.py  benchmark_test.py  demo_benchmark.ipynb  demo_reconstruction_methods.py  demo_signal_bank.ipynb  main.py  other_tests.py  pruebas_stft.py  saved_dictionary.pkl  signals_bank.py  utilstf.py
docs/: benchmark_demo.rst  conf.py  index.md  index.rst  methods.rst  modules.rst  old_index_copy.rst  table.md
docs/source/: conf.py
methods/: MethodTemplate.py  basic_methods.py  method_delaunay_triangulation.py  method_hard_threshold.py  method_new.py
new_method_example/: method_new_basic_template.py  method_new_basic_template_matlab.py  method_new_with_parameters.py
notebooks/: benchmark_aps_cello.ipynb  demo_benchmark.ipynb  demo_dt_method_cello.ipynb  demo_global_mad_tests.ipynb  demo_ht_method_cello.ipynb  demo_mc_envelope_tests.ipynb  demo_method_SST_RD.ipynb  demo_method_contour_filtering.ipynb  demo_method_contours.ipynb  demo_method_delaunay_triangulation.ipynb  demo_method_empty_space.ipynb  demo_method_hard_threshold.ipynb  demo_method_pseudo_bayesian.ipynb  demo_method_ssa_denoising.ipynb  demo_method_zero_class.ipynb  demo_rank_envelope_tests.ipynb  demo_signal_bank.ipynb  figure_all_signals.ipynb  figure_shrinking_domains.ipynb  readme.md  results_benchmark_musical_noise.ipynb  results_denoising_benchmark_CC.ipynb  results_denoising_benchmark_QRF.ipynb  results_power_of_tests.ipynb  study_execution_time.ipynb
results/: benchmark_cello_QRF.pkl  denoising_results_raw.csv  denoising_results_rearranged.csv  last_benchmark.pkl  last_benchmark_bckup.pkl  last_benchmark_denoising.pkl  last_benchmark_denoising_CC.pkl  last_benchmark_denoising_w_szc.pkl  last_benchmark_detection.pkl  last_benchmark_detection_2.pkl  plot_CosChirp.html  plot_ExpChirp.html  plot_HermiteFunction.html  plot_LinearChirp.html  plot_McCosPlusTone.html  plot_McCrossingChirps.html  plot_McMultiCos2.html  plot_McMultiLinear.html  plot_McOnOff2.html  plot_McOnOffTones.html  plot_McParallelChirps.html  plot_McParallelChirpsUnbalanced.html  plot_McSyntheticMixture2.html  plot_McTripleImpulse.html  plot_ToneDumped.html  plot_ToneSharpAttack.html  readme.md  report_benchmark.md  results_CosChirp.csv  results_ExpChirp.csv  results_HermiteFunction.csv  results_LinearChirp.csv  results_McCosPlusTone.csv  results_McCrossingChirps.csv  results_McMultiCos2.csv  results_McMultiLinear.csv  results_McOnOff2.csv  results_McOnOffTones.csv  results_McParallelChirps.csv  results_McParallelChirpsUnbalanced.csv  (+8 more)
results/csv_files/: denoising_results_raw.csv  denoising_results_rearranged.csv  results_McCrossingChirps.csv  results_McSyntheticMixture2.csv  results_ToneDumped.csv
results/denoising/: plot_HermiteFunction.html  plot_McMultiLinear.html  plot_McMultiLinear2.html  plot_McSyntheticMixture.html  plot_McSyntheticMixture2.html  plot_McSyntheticMixture3.html  plot_McSyntheticMixture4.html  results_HermiteFunction.csv  results_McMultiLinear.csv  results_McMultiLinear2.csv  results_McSyntheticMixture4.csv
results/denoising_CC/: plot_HermiteFunction.html  plot_McMultiLinear.html  plot_McMultiLinear2.html  plot_McSyntheticMixture.html  plot_McSyntheticMixture2.html  plot_McSyntheticMixture3.html  results_HermiteFunction.csv  results_McMultiLinear.csv  results_McMultiLinear2.csv  results_McSyntheticMixture.csv  results_McSyntheticMixture2.csv  results_McSyntheticMixture3.csv
results/detection/: plot_LinearChirp.html
src/aps_metric/: perf_metrics.py
src/benchmark_demo/: Benchmark.py  ResultsInterpreter.py  SignalBank.py  benchmark_utils.py  spatstats_utils.py  utilstf.py
src/methods/: BlockThresholding.m  MakeHanning.m  MethodTemplate.py  __init__.py  benchmark_utils.py  contour_filtering.m  contours_utils.py  method_block_tresholding.py  method_brevdo.py  method_contour_filtering.py  method_contours.py  method_delaunay_triangulation.py  method_empty_space.py  method_envelope_test.py  method_garrote_threshold.py  method_global_mad_test.py  method_hard_threshold.py  method_identity.py  method_new.py  method_new_basic_template.py  method_pseudo_bayesian.py  method_rank_envelope_test.py  method_soft_threshold.py  method_spatstats.py  method_sstrd.py  method_sz_classification.py  (+7 more)
tests/: test_basic_benchmark.py  test_methods.py  test_outputs.py
(+289 files in other folders)
