[tool.poetry]
name = "benchmark-demo"
version = "0.1.0"
description = "A benchmark for testing tf methods."
authors = ["Juan Miramont <jmiramont@univ-nantes.fr>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
scipy = "^1.7.3"
ipykernel = "^6.6.1"
seaborn = "^0.11.2"
cmocean = "^2.0"
pytest = "^7.0.1"

# Documentation
# configuration in docs/conf.py
Sphinx = { version = "^4.0.3", optional = true }
# Sphinx extensions https://www.sphinx-doc.org/en/master/usage/extensions/index.html
# Manage bibliography .bib files
# https://github.com/mcmtroffaes/sphinxcontrib-bibtex
sphinxcontrib-bibtex = { version = "^2.3.0", optional = true }
# Checks syntax of reStructuredText and code blocks nested within it https://github.com/myint/rstcheck
rstcheck = { version = "^3.3.1", optional = true }
tabulate = "^0.8.9"

[tool.poetry.extras]
# Jupyter notebooks to be edited in VSCode
# notebook = ["jupyter"]

# Documentation is generated with Sphinx
# https://www.sphinx-doc.org/en/master/index.html
# - locally with poetry run sphinx-build -b docs docs/_build/html
# - online either with
#     - ReadTheDocs see .readthedocs.yaml file
#     - GitHub pages see .github/workflows/docs.yml
docs = ["Sphinx", "sphinxcontrib-bibtex", "rstcheck"]


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
