[tool.poetry]
name = "benchmark-demo"
version = "0.1.0"
description = "A benchmark for testing tf methods."
authors = ["Juan Miramont <jmiramont@univ-nantes.fr>"]

[virtualenvs]
# Create local virtualenv stored in .venv (Python version used depends on VSCode selected interpreter)
# https://python-poetry.org/docs/configuration/#virtualenvsin-project
# poetry config virtualenvs.create true --local
# poetry config virtualenvs.in-project true --local
create = true
in-project = true

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
scipy = "^1.7.3"
seaborn = "^0.11.2"
cmocean = "^2.0"
pytest = "^7.0.1"
tabulate = "^0.8.9"
rpy2 = "^3.4.5"
spatstat-interface = "^0.1.2"
ipykernel = {version = "^6.6.1", optional = true}
Sphinx = {version = "^4.5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
PyYAML = "^6.0"
plotly = "^5.10.0"

[tool.poetry.extras]
# Documentation
# configuration in docs/conf.py
# rstcheck = { version = "^3.3.1", optional = true }
# Sphinx = { version = "^4.0.3", optional = true }
# Sphinx extensions https://www.sphinx-doc.org/en/master/usage/extensions/index.html
# Manage bibliography .bib files
# https://github.com/mcmtroffaes/sphinxcontrib-bibtex
# sphinxcontrib-bibtex = { version = "^2.3.0", optional = true }
# Checks syntax of reStructuredText and code blocks nested within it https://github.com/myint/rstcheck

# Jupyter notebooks to be edited in VSCode
notebooks = ["ipykernel"]
docs = ["Sphinx", "sphinx-rtd-theme"]

# Documentation is generated with Sphinx
# https://www.sphinx-doc.org/en/master/index.html
# - locally with poetry run sphinx-build -b docs docs/_build/html
# - online either with
#     - ReadTheDocs see .readthedocs.yaml file
#     - GitHub pages see .github/workflows/docs.yml
# docs = ["Sphinx", "sphinxcontrib-bibtex", "rstcheck"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
